# MK32

./: .clang-format  .cproject  .editorconfig  CMakeLists.txt  CMake_comversion_warnings.txt  README.md  TODO.md  sdkconfig  sdkconfig.old
components/battery_monitor/: CMakeLists.txt  battery_monitor.c  battery_monitor.h
components/ble_new/: CMakeLists.txt  common.h  hal_ble.c  hal_ble.h  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h  keyboard.c  keyboard.h  keylayouts.h  undefkeylayouts.h
components/config/: CMakeLists.txt  keyboard_config.h  keymap.c
components/espnow/: CMakeLists.txt  espnow_recieve.c  espnow_recieve.h  espnow_send.c  espnow_send.h
components/hid_keycode_conv/: CMakeLists.txt
components/ledc/main/: ledc_example_main.c
components/nvs_funcs/: CMakeLists.txt  arr_conv.c  arr_conv.h  nvs_funcs.c  nvs_funcs.h  nvs_keymaps.h
components/plugins/: CMakeLists.txt  layout_server.c  plugin_manager.c  plugin_manager.h  plugins.h  testFunc.c
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
main/: CMakeLists.txt  component.mk  key_definitions.h  keyboard_config.h  keymap.c  keymap.h  keypress_handles.c  matrix.c  matrix.h  mk32_main.cpp
plugins/: layout_server.h  plugins.c  testFunc.h
